Fix visibility toggle of elements

--- a/src/shared/styles/style.css
+++ b/src/shared/styles/style.css
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-    min-height: 100vh;
+    min-height: calc(100vh - 20px);
     padding: 10px;
     background-color: var(--background);
     display: flex;
